Fix coverage and sonar workflow